welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:14: error: '(' expected but identifier found.
for i for 1<- 4 {
    ^MethodsDogHouse:21: error: illegal start of simple expression
	override def run() {
        ^