welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
val i = 0


def dogHouse() {
	avance()
	avance()
	gauche()
	avance()
	avance()
		
	}

for i for 1<- 4 {
	dogHouse()
}

